<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">snaptee-sdk</string>

    <string name="co_snaptee_design">Design</string>
    <string name="co_snaptee_order">Order</string>
    <string name="co_snaptee_next">Next</string>
    <string name="co_snaptee_size">Size</string>
    <string name="co_snaptee_style">Style</string>
    <string name="co_snaptee_ship_to">Ship to:</string>
    <string name="co_snaptee_shipping_type">Shipping and Handling:</string>
    <string name="co_snaptee_discount_amount">Discount Amount</string>
    <string name="co_snaptee_add_coupon_code">Add coupon code</string>
    <string name="co_snaptee_apply">Apply</string>
    <string name="co_snaptee_cancel">Cancel</string>
    <string name="co_snaptee_delivery_information">Delivery Information</string>
    <string name="co_snaptee_name">Name</string>
    <string name="co_snaptee_email">Email</string>
    <string name="co_snaptee_phone">Phone</string>
    <string name="co_snaptee_address">Address</string>
    <string name="co_snaptee_address1">Address 1</string>
    <string name="co_snaptee_address2">Address 2</string>
    <string name="co_snaptee_city">City</string>
    <string name="co_snaptee_zip_code">Zip Code</string>
    <string name="co_snaptee_order_id">Order ID:</string>
    <string name="co_snaptee_receipt">Receipt</string>
    <string name="co_snaptee_paypal">PayPal</string>
    <string name="co_snaptee_error">Error</string>
    <string name="co_snaptee_payment_success">You will receive a confirmation email soon!\nPlease check your inbox.</string>
    <string name="co_snaptee_ok">OK</string>
    <string name="co_snaptee_thank_you">Thank you</string>
    <string name="co_snaptee_order_more">Order More</string>
    <string name="co_snaptee_back_to_design">Back to design</string>
    <string name="co_snaptee_back_to_app">Back to %s</string>
    <string name="co_snaptee_free_shipping">Free Shipping</string>
    <string name="co_snaptee_your_card_is_invalid">Your card is invalid</string>
    <string name="co_snaptee_faq">FAQ</string>
    <string name="co_snaptee_payment">Payment</string>
    <string name="use_another_card">Use another card</string>
    <string name="co_snaptee_credit_card">Credit Card</string>
    <string name="co_snaptee_clothing">Styles</string>
    <string name="pay_by">Pay By %s</string>
    <string name="pay_pal">PayPal</string>
    <string name="overlay_title">Make a T-shirt?</string>
    <string name="overlay_description">There\'s nothing quite like holding something you created Snaptee points your beautiful design on 1000% cotton and sends your one of a kind T-shirt directly to you.</string>
    <string name="co_snaptee_alipay">Alipay</string>
    <string name="co_snaptee_contact_snaptee">Contact Snaptee</string>
</resources>
