<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#fff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/thank_you">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#000"
                android:orientation="horizontal">

                <co.snaptee.shared.view.SquareFrameLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <co.snaptee.shared.view.TeeThumbnailView
                        android:id="@+id/tee_thumbnail"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="#d8d8d8"/>

                </co.snaptee.shared.view.SquareFrameLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <TextView
                        android:id="@+id/style_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/co_snaptee_style"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/style"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text=" "
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/size_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:text="@string/co_snaptee_size"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"/>

                    <TextView
                        android:id="@+id/size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/co_snaptee_size"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"/>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:background="@android:color/darker_gray"/>

            <TextView
                android:id="@+id/delivery_info_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/co_snaptee_delivery_information"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#777"
                android:textSize="20sp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="5dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="2dp"
                android:background="@android:color/darker_gray"/>

            <!-- Order ID -->

            <TextView
                android:id="@+id/order_id_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/co_snaptee_order_id"
                android:textColor="#000"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/order_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="10dp"
                android:text=""
                android:textColor="#000"
                android:textSize="18sp"/>

            <!-- Tee price -->

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp">

                <TextView
                    android:id="@+id/product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <!-- Discount rate -->

            <RelativeLayout
                android:id="@+id/discount_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/discount_rate_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co_snaptee_discount_amount"
                    android:textColor="#000"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/discount_rate_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/discount_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/discount_amount_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co_snaptee_discount_amount"
                    android:textColor="#000"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/discount_amount_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <!-- Ship to -->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ship_to_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co_snaptee_ship_to"
                    android:textColor="#333"
                    android:textSize="16sp"/>

            </LinearLayout>

            <TextView
                android:id="@+id/address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text=""
                android:textColor="#000"
                android:textSize="18sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/shipping_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/shipping_cost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text=""
                android:textColor="#000"
                android:textSize="12dp"/>

            <RelativeLayout
                android:id="@+id/shipping_discount_row"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/shipping_discount_header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/co_snaptee_free_shipping"
                    android:textColor="#000"
                    android:textSize="16sp"/>

                <TextView
                    android:id="@+id/shipping_discount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:text=""
                    android:textColor="#000"
                    android:textSize="16sp"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="3dp"
                android:background="#000"/>

            <TextView
                android:id="@+id/total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="right"
                android:text=""
                android:textColor="#000"
                android:textSize="16sp"/>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/thank_you"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/co_snaptee_button_background"
        android:text="@string/co_snaptee_thank_you"
        android:textColor="#fff"/>

</RelativeLayout>